move position indicator into a factory

--- a/default.html
+++ b/default.html
@@ -261,8 +261,10 @@
 
     <script src="refresh_web/jquery-1.11.0.js"></script>
     <script src="refresh_web/angular.js"></script>
+    
     <script src="refresh_web/colorpicker/ColorPicker_Ang.js"></script>
     <script src="refresh_web/colorpicker/ColorMethods_Ang.js" ></script>
+    <script src="refresh_web/colorpicker/positionindicatorfactory.js"></script>
     
 
 </div><!-- end whole body div -->
