--- a/default.html
+++ b/default.html
@@ -37,7 +37,7 @@
 </head>
 
 <body ng-controller="MainController">
-    <div style="padding:20px;border: solid 1px black;float:left" ng-mouseup="mouseup($event)" ng-mousemove="mousemove($event)" ng-mouseleave="mouseleave($event)">
+    <!--<div style="padding:20px;border: solid 1px black;float:left" ng-mouseup="mouseup($event)" ng-mousemove="mousemove($event)" ng-mouseleave="mouseleave($event)">
         <h1>Photoshop-like AngularJS Color Picker</h1>
 
         <p>This color picker mimics Photoshop color picker by layering transparent images.</p>
@@ -202,7 +202,9 @@
         <img ng-mousedown="mapmousedown($event)" ng-style="mappoint" id="mappoint" src="refresh_web/colorpicker/images/mappoint.gif" alt="">
         <img ng-mousedown="barmousedown($event)" ng-style="rangearrows" id="rangearrows" src="refresh_web/colorpicker/images/rangearrows.gif" alt="">
 
-    </div>
+    </div>-->
+    <icrcolor-picker></icrcolor-picker>
+    
     <script src="refresh_web/jquery-1.11.0.js"></script>
     <script src="refresh_web/angular.js"></script>
 
