some cleanup and positioning experiments

--- a/default.html
+++ b/default.html
@@ -38,8 +38,12 @@
 </head>
 
 <body ng-controller="MainController">
+       <h1>Photoshop-like AngularJS Color Picker</h1>
 
-    <icrcolor-picker></icrcolor-picker>
+    <p>This color picker mimics Photoshop color picker by layering transparent images.</p>
+    
+    <div style="padding:40px;background-color:red;"></div>
+    <icrcolor-picker style="display:block;padding:5px;margin:20px;background-color:cyan;overflow:auto;float:left;"></icrcolor-picker>
     
     <script src="refresh_web/jquery-1.11.0.js"></script>
     <script src="refresh_web/angular.js"></script>
