reorganize and clean old files

--- a/refresh_web/index.html
+++ b/refresh_web/index.html
@@ -32,7 +32,7 @@
 	-->
 
     <title>AngularJS Color Picker</title>
-    <link rel="stylesheet" type="text/css" href="refresh_web/colorpicker/colorpicker.css">
+    <link rel="stylesheet" type="text/css" href="colorpicker/colorpicker.css">
     
 
 </head>
@@ -45,12 +45,12 @@
     <div style="padding:40px;background-color:red;"></div>
     <icrcolor-picker style="display:block;padding:5px;margin:20px;background-color:cyan;overflow:auto;float:left;"></icrcolor-picker>
     
-    <script src="refresh_web/colorpicker/scripts/jquery-1.11.0.js"></script>
-    <script src="refresh_web/colorpicker/scripts/angular.js"></script>
+    <script src="colorpicker/scripts/jquery-1.11.0.js"></script>
+    <script src="colorpicker/scripts/angular.js"></script>
 
-    <script src="refresh_web/colorpicker/scripts/ColorPicker_Ang.js"></script>
-    <script src="refresh_web/colorpicker/scripts/ColorMethods_Ang.js"></script>
-    <script src="refresh_web/colorpicker/scripts/positionindicatorfactory.js"></script>
+    <script src="colorpicker/scripts/ColorPicker_Ang.js"></script>
+    <script src="colorpicker/scripts/ColorMethods_Ang.js"></script>
+    <script src="colorpicker/scripts/positionindicatorfactory.js"></script>
     <!-- end whole body div -->
 </body>
 
