--- a/refresh_web/index.html
+++ b/refresh_web/index.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body ng-controller="MainController">
+<body ng-controller="MainController as cp">
        <h1>Photoshop-like AngularJS Color Picker</h1>
 
     <p>This color picker mimics Photoshop color picker by layering transparent images.</p>
