remove redundant jquery value updates

--- a/refresh_web/colorpicker/colorpickertemplate.html
+++ b/refresh_web/colorpicker/colorpickertemplate.html
@@ -4,18 +4,18 @@
         <tr>
             <td valign="top">
                 <div id="cp1_ColorMap" ng-mousedown="cp.mapmousedown($event)">
-                    <img id="cp1_mapL1" ng-src="{{cp.cp1_mapL1_src}}" width="256px" height="256px">
-                    <img id="cp1_mapL2" ng-src="{{cp.cp1_mapL2_src}}" width="256px" height="256px">
+                    <img id="cp1_mapL1" ng-src="{{cp.cp1_mapL1_src}}" width="256px" height="256px"/>
+                    <img id="cp1_mapL2" ng-src="{{cp.cp1_mapL2_src}}" width="256px" height="256px"/>
                 </div>
             </td>
 
             <td valign="top">
                 <div id="cp1_ColorBar" ng-mousedown="cp.barmousedown($event)">
 
-                    <img id="cp1_barL1" ng-src="{{cp.cp1_barL1_src}}" width="20px" height="256px">
-                    <img id="cp1_barL2" ng-src="{{cp.cp1_barL2_src}}" width="20px" height="256px">
-                    <img id="cp1_barL3" ng-src="{{cp.cp1_barL3_src}}" width="20px" height="256px">
-                    <img id="cp1_barL4" ng-src="{{cp.cp1_barL4_src}}" width="20px" height="256px">
+                    <img id="cp1_barL1" ng-src="{{cp.cp1_barL1_src}}" width="20px" height="256px"/>
+                    <img id="cp1_barL2" ng-src="{{cp.cp1_barL2_src}}" width="20px" height="256px"/>
+                    <img id="cp1_barL3" ng-src="{{cp.cp1_barL3_src}}" width="20px" height="256px"/>
+                    <img id="cp1_barL4" ng-src="{{cp.cp1_barL4_src}}" width="20px" height="256px"/>
                 </div>
             </td>
 
